--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ Decomposition and Recomposition, as described in
 Unicode Standard Annex #15.
 """
 
-exclude = [ "target/*", "Cargo.lock", "scripts/tmp", "*.txt", "src/normalization_tests.rs", "src/test.rs" ]
+exclude = [ "target/*", "Cargo.lock", "scripts/tmp", "*.txt", "tests/normalization_tests.rs", "tests/stream_safe_normalization.rs", "tests/test_normalization.rs" ]
 
 [dependencies]
 smallvec = "0.6"
